<resources>
    <string name="app_name">Bro</string>
    <string name="login_register">Register</string>
    <string name="button_enter">Enter</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="login_image">Login Image</string>
    <string name="error_label">error</string>
    <string name="no_data_found">No Data Found</string>
</resources>
