<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginFragment">

        <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginTop="@dimen/login_margin_top"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/login_image"/>

        <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                android:layout_marginTop="@dimen/login_margin_top"

                app:layout_constraintTop_toBottomOf="@id/ivLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <EditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_layout"

                app:layout_constraintTop_toBottomOf="@id/etLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <Button android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_enter"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/login_margin_top"
                android:background="@color/colorAccent"

                app:layout_constraintTop_toBottomOf="@id/etPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <ProgressBar
                android:id="@+id/pbLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/login_margin_top"

                app:layout_constraintTop_toBottomOf="@id/etPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:text="@string/error_label"
                android:layout_marginTop="@dimen/margin_layout"
                android:textAlignment="center"
                android:textColor="@color/danger"

                app:layout_constraintTop_toBottomOf="@id/btLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/login_register"
                  android:id="@+id/tvRegister"
                  android:layout_marginTop="@dimen/margin_layout"
                  android:textAlignment="center"
                  android:textSize="14sp"
                  android:textAllCaps="true"

                  app:layout_constraintTop_toBottomOf="@id/tvError"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>